minor mobile alignment fix

--- a/src/css/imports/hero.css
+++ b/src/css/imports/hero.css
@@ -68,7 +68,10 @@
 
   .ctas {
     margin-bottom: $small;
-    text-align: left;
+
+    @media screen and (min-width: $mobile) {
+      text-align: left;
+    }
 
     ul {
       list-style-type: none;
@@ -99,7 +102,10 @@
 
   .mooseheads {
     margin: $micro 0 0 0;
-    text-align: left;
+
+    @media screen and (min-width: $mobile) {
+      text-align: left;
+    }
 
     strong {
       font-size: 12px;
